--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,10 +1,10 @@
 .header {
   width: 100%;
-  max-width: 1440px;
+  max-width: 1600px;
   box-sizing: border-box;
   background: transparent;
   margin: 0 auto;
-  padding: 0 36px;
+  padding: 0;
   position: relative;
   display: flex;
   justify-content: space-between;
